# libp17r

./: CMakeLists.txt
include/: p17r-app.h  p17r-draw.h  p17r-json.h  p17r-log.h  p17r-mem.h  p17r-noise.h  p17r-profile.h  p17r-resources.h  p17r-rl.h  p17r-sched.h  p17r.h
src/: app.c  arena.c  draw.c  json.c  log.c  mem.c  noise.c  resources.c  rl.c  rres.c  sched.c
